--- a/example-digits/test.html
+++ b/example-digits/test.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 <title>Gradual : digits</title>
+<link rel="icon" href="data:image/x-icon;base64,">
 <link rel="stylesheet" type="text/css" href="../example-shared/main.css"/>
 <style>
 	body {
